--- a/network/rsync/files/rsyncd.conf
+++ b/network/rsync/files/rsyncd.conf
@@ -1,15 +1,10 @@
-# /etc/rsyncd.conf
+uid = nobody
+gid = nobody
+use chroot = no
+max connections = 4
+syslog facility = local5
+pid file = /run/rsyncd.pid
 
-# Minimal configuration file for rsync daemon
-# See rsync(1) and rsyncd.conf(5) man pages for help
-
-# This line is required by the /etc/init.d/rsyncd script
-pid file = /var/run/rsyncd.pid
-use chroot = yes
-read only = yes
-
-# Simple example for enabling your own local rsync server
-#[gentoo-portage]
-#	path = /usr/portage
-#	comment = Gentoo Portage tree
-#	exclude = /distfiles /packages
+[ftp]
+        path = /srv/ftp
+        comment = ftp area
