--- a/libs/polkit-gnome/files/polkit-gnome-authentication-agent-1.desktop
+++ b/libs/polkit-gnome/files/polkit-gnome-authentication-agent-1.desktop
@@ -29,6 +29,7 @@ Name[pl]=Agent uwierzytelniania PolicyKit
 Name[pt]=Agente de Autenticação PolicyKit
 Name[pt_BR]=Agente de autenticação PolicyKit
 Name[ro]=Agent de autentificare PolicyKit
+Name[ru]=Агент аутентификации PolicyKit 
 Name[sk]=Agent PolicyKit na overovanie totožnosti
 Name[sl]=PolicyKit program overjanja
 Name[sv]=Autentiseringsagent för PolicyKit
@@ -69,6 +70,7 @@ Comment[pl]=Agent uwierzytelniania PolicyKit
 Comment[pt]=Agente de Autenticação PolicyKit
 Comment[pt_BR]=Agente de autenticação PolicyKit
 Comment[ro]=Agent de autentificare PolicyKit
+Comment[ru]=Агент аутентификации PolicyKit
 Comment[sk]=Agent PolicyKit na overovanie totožnosti
 Comment[sl]=PolicyKit program overjanja
 Comment[sv]=Autentiseringsagent för PolicyKit
@@ -84,4 +86,4 @@ Terminal=false
 Type=Application
 Categories=
 NoDisplay=true
-NotShowIn=KDE;
+OnlyShowIn=GNOME;
