--- a/x11-misc/lightdm/files/lightdm.rc
+++ b/x11-misc/lightdm/files/lightdm.rc
@@ -1,20 +1,16 @@
-#!/sbin/openrc-run
-# Copyright 2010 Agilia Linux team/fat0troll/K900
-# Distributed under the terms of the GNU General Public License, v2 or later
-# Special thanks goes to Gentoo
+#!/usr/bin/openrc-run
+supervisor=supervise-daemon
+
+name="Display Manager"
+description="Lightweight $name"
+
+command=/usr/bin/lightdm
 
 depend() {
-	use logger acpid
-	after coldplug dns nscd consolefont keymaps dbus
-        provide xdm
+	provide display-manager
+	need localmount dbus
 }
 
-start() {
-	ebegin "Starting X11 login with LightDM..."
-	start-stop-daemon --start -q --exec /usr/bin/lightdm --pidfile /var/run/lightdm.pid -b
-}
-
-stop() {
-	ebegin "Stopping X11 login with LightDM..."
-	start-stop-daemon --stop -q --pidfile /var/run/lightdm.pid
+start_pre() {
+	checkpath --owner lightdm:lightdm --directory /run/lightdm
 }
