Обновлён пакет networkmanager-1.38.0, перенос библиотек в /usr/lib

--- a/net-misc/networkmanager/files/NetworkManager.conf
+++ b/net-misc/networkmanager/files/NetworkManager.conf
@@ -1,2 +1,4 @@
+# Конфигурационный файл для NetworkManager.
+# Подробности см. в разделе "man 5 NetworkManager.conf".
 [main]
-dhcp=internal
+plugins=keyfile
